# llvm-supermutate

./: .dockerignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docker/: Dockerfile.builder  Dockerfile.llvm  Dockerfile.llvmsupermutate  Makefile  install  llvmsupermutate
example/: Dockerfile  entrypoint.sh  foo.c  run.sh  supermutate.sh
include/llvm-supermutate/: InstructionFilter.h  InstructionFilters.h  Mutation.h  MutationEngine.h  Mutator.h  Mutators.h  Supermutator.h  SupermutatorConfig.h  Utils.h
include/llvm-supermutate/InstructionFilters/: DebugInfoFilter.h  FunctionFilter.h  InstrumentationFilter.h
include/llvm-supermutate/Mapping/: File.h  Function.h  Global.h  Instruction.h  LLVMToSourceMapping.h  Value.h  Variable.h
include/llvm-supermutate/Mutators/: BinOpcodeMutator.h  ICmpMutator.h  LoadMutator.h
lib/: CMakeLists.txt  Mutation.cpp  MutationEngine.cpp  Supermutator.cpp  SupermutatorConfig.cpp  Utils.cpp
lib/Mapping/: File.cpp  Function.cpp  Global.cpp  Instruction.cpp  LLVMToSourceMapping.cpp  Value.cpp  Variable.cpp
lib/Mutators/: BinOpcodeMutator.cpp  ICmpMutator.cpp  LoadMutator.cpp
src/passes/: CMakeLists.txt
src/passes/llvmsupermutator/: CMakeLists.txt  LLVMSupermutatorPass.cpp  LLVMSupermutatorPass.h
src/passes/llvmtosource/: CMakeLists.txt  LLVMToSourceMappingPass.cpp  LLVMToSourceMappingPass.h
